          within the prefetch result parser may highlight previously unknown
          mismatches between your codebase and data source
        - Calling the set_* many-to-many helper with a list (instead of an
          arrayref) now emits a deprecation warning
        - Calling the getter $rsrc->from("argument") now throws an exception
          instead of silently discarding the argument

    * New Features
        - DBIC now performs a range of sanity checks on the entire hierarchy
          of Schema/Result/ResultSet classes loudly alerting the end user to
          potential extremely hard-to-diagnose pitfalls ( RT#93976, also fully
          addresses https://blog.afoolishmanifesto.com/posts/mros-and-you/ )
        - A new low-level API for relationship resolution is available as an
          official method ( $rsrc->resolve_relationship_condition ). This is
          mainly of interest to builders of reflection tools
        - InflateColumn::DateTime now accepts the ecosystem-standard option
          'time_zone', in addition to the DBIC-only 'timezone' (GH#28)
        - Massively optimised literal SQL snippet scanner - fixes all known
          slowdowns ( in some cases 50x ) of very complex prefetch/selects
        - DBIx::Class::Optional::Dependencies now properly understands
          combinations of requirements and does the right thing with e.g.
          ->req_list_for([qw( rdbms_oracle ic_dt )]) bringing in the Oracle
          specific DateTime::Format dependencies

    * Fixes
        - Fix regresion (0.082800) of certain calls being presented stale
          result source metadata (RT#107462)
        - Fix incorrect SQL generated with invalid {rows} on complex resultset
          operations, generally more robust handling of rows/offset attrs
        - Fix silent failure to retrieve a primary key (RT#80283) or worse:
          returning an incorrect value (RT#115381) in case a rdbms-side autoinc