@@ -17,7 +17,7 @@ my $sql_maker = $schema->storage->sql_maker;
 for my $expect_warn (1, 0) {
   warnings_like (
     sub {
-      my ($sql, @bind) = $sql_maker->select ('foo', undef, { -nest => \ 'bar' } );
+      my ($sql, @bind) = $sql_maker->select ('foo', '*', { -nest => \ 'bar' } );
       is_same_sql_bind (
         $sql, \@bind,
         'SELECT * FROM foo WHERE ( bar )', [],
